mybril/src/snapshots/mybril__test__dot@nop.bril.snap
---
source: mybril/src/main.rs
expression: dot
input_file: mybril/tests/test/interp/core/nop.bril
---
digraph main {
  b0;
}

