mybril/src/snapshots/mybril__test__dot@nop.json.snap
---
source: mybril/src/main.rs
expression: dot
input_file: mybril/tests/nop.json
---
digraph main {
  b0;
}

