mybril/src/snapshots/mybril__test__dot@ret.bril.snap
---
source: mybril/src/main.rs
expression: dot
input_file: mybril/tests/test/interp/core/ret.bril
---
digraph main {
  b0;
}

