mybril/src/snapshots/mybril__test__dot@ret.json.snap
---
source: mybril/src/main.rs
expression: dot
input_file: mybril/tests/ret.json
---
digraph main {
  b0;
}

