mybril/src/snapshots/mybril__test__dot@tiny.bril.snap
---
source: mybril/src/main.rs
expression: dot
input_file: mybril/tests/test/interp/core/tiny.bril
---
digraph main {
  b0;
}

