mybril/src/snapshots/mybril__test__dot@tiny.json.snap
---
source: mybril/src/main.rs
expression: dot
input_file: mybril/tests/tiny.json
---
digraph main {
  b0;
}

