mybril/src/snapshots/mybril__test__lvn@commute.bril.snap
---
source: mybril/src/main.rs
expression: "format!(\"{}\\n\\n{} -> {}\\n\\n{}\", txt, orig.1, after.1,\n    bril2txt(json_after.as_str()))"
input_file: mybril/tests/examples/lvn/commute.bril
---
# ARGS: -c
# (a + b) * (b + a)
@main {
  a: int = const 4;
  b: int = const 2;
  sum1: int = add a b;
  sum2: int = add b a;
  prod: int = mul sum1 sum2;
  print prod;
}


6 -> 5

@main {
  a: int = const 4;
  b: int = const 2;
  sum1: int = add a b;
  prod: int = mul sum1 sum1;
  print prod;
}

