mybril/src/snapshots/mybril__test__lvn@fold-comparisons.bril.snap
---
source: mybril/src/main.rs
expression: "format!(\"{}\\n\\n{} -> {}\\n\\n{}\", txt, orig.1, after.1,\n    bril2txt(json_after.as_str()))"
input_file: mybril/tests/examples/lvn/fold-comparisons.bril
---
# ARGS: -f

@main(arg1: int, arg2: int) {
  a: int = const 4;
  b: int = const 3;
  constant_fold2: bool = eq a b;
  constant_fold3: bool = le a b;
  constant_fold4: bool = lt b a;
  constant_fold5: bool = gt b a;
  constant_fold6: bool = ge b a;

  should_fold1: bool = eq arg1 arg1;
  should_fold2: bool = le arg1 arg1;
  should_fold3: bool = ge arg1 arg1;

  no_fold1: bool = eq arg1 arg2;
  no_fold2: bool = le arg1 arg2;
  no_fold3: bool = ge arg1 arg2;

  no_fold4: bool = lt arg1 arg1;
  no_fold5: bool = gt arg2 arg2;
}


114514 -> 0

@main {
}

